Partially fixed spacing in contact information

--- a/src/components/Contact.css
+++ b/src/components/Contact.css
@@ -1,9 +1,21 @@
-.contact-text {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+.container {
+    display: inline-block;
     width: 100%;
-    margin: 20px; /* Add some margin for spacing */
+}
+
+.contact-body {
+    display: flex;
+    /* flex-direction: row; */
+    justify-content: space-evenly;
+    width: 100%;
+    margin-top: 20px;
+    margin-left: 5%; /* Adjust the margin to control space between items */
+    margin-right: 5%; /* Adjust the margin to control space between items */
+}
+
+.contact-text {
+    color: white;
+    flex: 1;
 }
 
 .title {
